# Eagle

./: README.md  index.html
Eagle1/: train.py  train_mem.py
Eagle1/eagle/: __init__.py  conversation.py
Eagle1/eagle/model/: __init__.py  builder.py  eagle_arch.py
Eagle1/eagle/model/language_model/: eagle_qwen.py
Eagle1/eagle/model/multimodal_encoder/: convnext_encoder.py  multi_backbone_channel_concatenation_encoder.py  qwen2_5vl_encoder.py  timm_encoder.py
Eagle1/eagle/model/multimodal_encoder/vision_models/: convnext.py
Eagle1/scripts/: finetune-qwen2.5-x2-3b-1.8m.sh  pretrain_qwen2.5-x2-3b-1.8m.sh
Eagle2_5/: README.md
Eagle2_5/eaglevl/model/c_radio/: radio_model.py
Eagle2_5/eaglevl/model/eagle2_5/: __init__.py  modeling_eagle2_5_vl.py
Eagle2_5/eaglevl/model/eagle3/: __init__.py  configuration_eagle3_vl.py  modeling_eagle3_vl.py
Eagle2_5/eaglevl/model/eagle_flash/: __init__.py  configuration_eagle_flash.py  modeling_eagle_flash.py
Eagle2_5/eaglevl/model/multimodal_encoder/: configuration_multi_backbone_channel_concatentation_model.py  convnext_encoder.py  debug.py  multi_backbone_channel_concatenation_encoder.py  multi_backbone_channel_concatentation_model.py
Eagle2_5/eaglevl/model/qwen2/: attention.py  test.py
Eagle2_5/eaglevl/model/siglip2/: modeling_siglip2_old.py  siglip2_cursor.py
Eagle2_5/eaglevl/patch/: __init__.py  fused_monkey_patch.py  packing_attention.py  pad_data_collator.py  train_sampler_patch.py
Eagle2_5/eaglevl/train/: arguments.py  data_prepare.py  dataset.py  eagle_2_5_vl_finetune.py  liger_loss_weight_ops.py  loading_frames.py  tools.py
Eagle2_5/shell/: train_stage1.sh
Embodied/: locateanything_worker.py
cpp_trt/: .gitignore  CMakeLists.txt  README.md
cpp_trt/cmake/: FindTensorRT.cmake
cpp_trt/docker/: Dockerfile
cpp_trt/export/: README.md  build_vision_engine.py  compare_vision_parity.py  export_vision_onnx.py  feature_extractor_wrapper.py
cpp_trt/export_llm/: README.md  build_decoder_trt.py  build_trtllm_engine.py  convert_qwen_trtllm.py  export_decoder_onnx.py
cpp_trt/src/: CMakeLists.txt
cpp_trt/src/api/: CMakeLists.txt
cpp_trt/src/api/include/la/api/: prompts.h  worker.h
cpp_trt/src/api/src/: prompts.cpp  worker.cpp
cpp_trt/src/api/tests/: test_prompts.cpp  test_worker.cpp
cpp_trt/src/config/: CMakeLists.txt
cpp_trt/src/config/include/la/config/: token_ids.hpp
cpp_trt/src/config/src/: token_ids.cpp
cpp_trt/src/decode/: CMakeLists.txt
cpp_trt/src/decode/include/la/decode/: mask.h  position_ids.h
cpp_trt/src/decode/src/: mask.cpp  position_ids.cpp
cpp_trt/src/decode/tests/: test_mask.cpp  test_position_ids.cpp
cpp_trt/src/generate/: CMakeLists.txt
cpp_trt/src/generate/include/la/generate/: coord.hpp  decode_loop.hpp  parse.hpp  sampling.hpp
cpp_trt/src/generate/src/: coord.cpp  decode_loop.cpp  parse.cpp  sampling.cpp
cpp_trt/src/generate/tests/: test_coord.cpp  test_decode_loop.cpp  test_parse.cpp  test_sampling.cpp
cpp_trt/src/llm/: CMakeLists.txt
cpp_trt/src/llm/include/la/llm/: LlmEngine.h
cpp_trt/src/llm/src/: llm_engine_factory.cpp  llm_engine_standalone_trt.cpp  llm_engine_trtllm.cpp
cpp_trt/src/preprocess/: CMakeLists.txt
cpp_trt/src/preprocess/cuda/: preprocess_cuda.cu
cpp_trt/src/preprocess/include/la/preprocess/: preprocess.h
cpp_trt/src/preprocess/src/: bicubic_resize.h  preprocess_cpu.cpp
cpp_trt/src/preprocess/test/: test_preprocess.cpp
cpp_trt/src/tokenizer/: CMakeLists.txt  README.md
cpp_trt/src/tokenizer/include/la/tokenizer/: bpe_tokenizer.hpp  chat_template.hpp  tokenizer_ffi.h
cpp_trt/src/tokenizer/rust/: Cargo.toml
cpp_trt/src/tokenizer/rust/src/: lib.rs
cpp_trt/src/tokenizer/src/: bpe_tokenizer.cpp  chat_template.cpp
cpp_trt/src/tokenizer/test/: test_bpe_tokenizer.cpp  test_chat_template.cpp
cpp_trt/src/vision/: CMakeLists.txt
cpp_trt/src/vision/include/la/vision/: VisionEngine.h
cpp_trt/src/vision/src/: VisionEngine.cpp
cpp_trt/src/vision_rope/: CMakeLists.txt
cpp_trt/src/vision_rope/include/la/vision_rope/: vision_rope.h
cpp_trt/src/vision_rope/src/: vision_rope.cpp  vision_rope_cuda.cu
cpp_trt/tests/: CMakeLists.txt  test_api.cpp  test_config.cpp  test_decode.cpp  test_generate.cpp  test_preprocess.cpp  test_tokenizer.cpp  test_vision_rope.cpp
cpp_trt/tools/reference_harness/: README.md  dump_reference.py
docs/superpowers/specs/: 2026-05-29-locateanything-cpp-trt-design.md
